# mock-schedule-system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  HANDOVER.md  README.md  SPEC.md  local.yml  pyproject.toml  run
app/: exceptions.py  main.py  models.py  routers.py
app/auth/: exceptions.py  router.py  security.py  services.py
app/department/: models.py
app/shared/: config.py  database.py  dependencies.py  link_table.py  models.py
app/skill_tag/: models.py
app/user/: models.py  repo.py  schemas.py
migrations/: env.py
migrations/versions/: b01eb08f2415_init.py
