[project]
name = "mock-schedule-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.135.3",
    "pydantic-settings>=2.13.1",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.8",
]



[tool.mypy]
# Enable the SQLAlchemy plugin here
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
